--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,18 @@
-// Начните писать стили здесь
+.body {
+  background: #e7e5e5;
+}
+
+.visually-hidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+}
+
+.modal {
+  display: none;
+}
