Исправления по стилизации

--- a/source/sass/blocks/modal-succsess__description.scss
+++ b/source/sass/blocks/modal-succsess__description.scss
@@ -1,5 +1,5 @@
 .modal-succsess__description {
-  font-family: 'PT Sans';
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
