--- a/source/sass/blocks/review__button.scss
+++ b/source/sass/blocks/review__button.scss
@@ -1,9 +1,9 @@
-.rewiew__button {
+.review__button {
   width: 284px;
   height: 58px;
   margin: 0;
   margin-top: 26px;
-  margin-left: 18px;
+  margin-left: 0px;
   margin-bottom: 49px;
   padding: 0;
   justify-content: center;
