--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -67,8 +67,9 @@
 @import "./blocks/label.scss";
 @import "./blocks/review__textarea.scss";
 @import "./blocks/button.scss";
-@import "./blocks/rewiew__button.scss";
+@import "./blocks/review__button.scss";
 @import "./blocks/modal-error__title.scss";
 @import "./blocks/modal-error__description.scss";
+@import "./blocks/modal-succsess.scss";
 @import "./blocks/modal-succsess__title.scss";
 @import "./blocks/modal-succsess__description.scss";
