переход на новое ус-во

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,13 @@
 .header {
+  /* @media {
+    .logo__img {
+      display: none;
+    }
+  }
+
+  ;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; */
   width: 320px;
   background-color: #FFFFFF;
 }
