--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
+@import "./blocks/mixins/mixin.scss";
 @import "./blocks/fonts.scss";
 @import "./blocks/theme-light.scss";
 @import "./blocks/theme-dark.scss";
