--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -2,5 +2,15 @@
   display: grid;
   width: 320px;
   background: #e7e5e5;
-  margin: auto;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1280px;
+    margin: 0 auto;
+  }
 }
