--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,4 +1,12 @@
 .content {
   width: 320px;
   background: #ffffff;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1280px;
+  }
 }
