--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,13 +1,15 @@
 .header {
-  /* @media {
-    .logo__img {
-      display: none;
-    }
-  }
-
-  ;
   display: flex;
-  flex-direction: column; */
+  flex-direction: column;
   width: 320px;
   background-color: #FFFFFF;
+
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1280px;
+  }
 }
