--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,6 +1,13 @@
 .logo {
-  position: absolute;
-  margin-left: 4%;
+  margin: 0 auto;
   width: 185px;
   height: 96px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 auto;
+  }
 }
