--- a/source/sass/blocks/toggle.scss
+++ b/source/sass/blocks/toggle.scss
@@ -2,4 +2,12 @@
   position: relative;
   border: none;
   background-color: #ffffff;
+
+  @media (min-width: $tablet-width) {
+    display: none
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none
+  }
 }
