--- a/source/sass/blocks/wonder.scss
+++ b/source/sass/blocks/wonder.scss
@@ -1,3 +1,12 @@
 .wonder {
   padding: 0;
+  margin: 0;
+  grid-row: 5;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+  }
+  @media (min-width: $desktop-width) {
+    width: 1200px;
+  }
 }
