--- a/source/sass/blocks/intro__img.scss
+++ b/source/sass/blocks/intro__img.scss
@@ -1,4 +1,9 @@
 .intro__img {
-  padding-top: 80px;
-  padding-left: 16px;
+  width: 320px;
+  background-repeat: no-repeat;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+    height: 280px;
+  }
 }
