--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -2,6 +2,7 @@
   margin-top: 0px;
   padding-left: 0;
   padding-bottom: 0;
+  margin-bottom: 0;
   font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 700;
@@ -11,5 +12,4 @@
   list-style-type: none;
   text-decoration: none;
   background: #81B3D2;
-  color: #ffffff;
 }
