--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,4 @@
-@import "./blocks/mixins/mixin.scss";
+@import "./blocks/mixins/mixins.scss";
 @import "./blocks/fonts.scss";
 @import "./blocks/theme-light.scss";
 @import "./blocks/theme-dark.scss";
@@ -17,6 +17,7 @@
 @import "./blocks/content.scss";
 @import "./blocks/intro.scss";
 @import "./blocks/intro__img.scss";
+@import "./blocks/intro__img-index.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/advantages__title";
 @import "./blocks/advantages__head";
@@ -27,12 +28,13 @@
 @import "./blocks/advantages-item__sub.scss";
 @import "./blocks/advantages-item__description.scss";
 @import "./blocks/advantages__city-img.scss";
+@import "./blocks/advantages__city.scss";
 @import "./blocks/advantages__list.scss";
 @import "./blocks/advantages-list.scss";
 @import "./blocks/advantages-list__photo.scss";
 @import "./blocks/advantages-list__title.scss";
 @import "./blocks/advantages-list__sub.scss";
-@import "./blocks/text.scss";
+@import "./blocks/text-index.scss";
 @import "./blocks/text__title.scss";
 @import "./blocks/text__sub.scss";
 @import "./blocks/text__description.scss";
@@ -41,6 +43,8 @@
 @import "./blocks/wonder__title.scss";
 @import "./blocks/wonder__description.scss";
 @import "./blocks/wonder__button.scss";
+@import "./blocks/map.scss";
+@import "./blocks/map__image.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/footer__title.scss";
 @import "./blocks/footer__academy-logo.scss";
@@ -74,3 +78,13 @@
 @import "./blocks/modal-succsess.scss";
 @import "./blocks/modal-succsess__title.scss";
 @import "./blocks/modal-succsess__description.scss";
+@import "./blocks/nav__list.scss";
+@import "./blocks/reset-list.scss";
+@import "./blocks/content__block-card.scss";
+@import "./blocks/content__card.scss";
+@import "./blocks/advantages-list__bridge.scss";
+@import "./blocks/advantages__item-list.scss";
+@import "./blocks/footer__academy.scss";
+@import "./blocks/content__user-information.scss";
+@import "./blocks/content__introduce.scss";
+@import "./blocks/content__information.scss";
