--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,12 +1,4 @@
 .content {
-  width: 320px;
+  width: 100%;
   background: #ffffff;
-
-  @media (min-width: $tablet-width) {
-    width: 768px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 1280px;
-  }
 }
