--- a/source/sass/blocks/map__image.scss
+++ b/source/sass/blocks/map__image.scss
@@ -2,6 +2,7 @@
   display: block;
 
   @media (min-width:$tablet-width) {
-    background-image: url(../img/map-tablet.svg);
+    background-image: url(/img/map-tablet.svg);
+    background-repeat: no-repeat;
   }
 }
