--- a/source/sass/blocks/mixins/mixins.scss
+++ b/source/sass/blocks/mixins/mixins.scss
@@ -1,6 +1,12 @@
 $tablet-width: 768px;
 $desktop-width: 1200px;
 $mobile-width-only: 767px;
+$font-stack: "PT Sans", Arial, Helvetica, sans-serif;
+$white: #ffffff;
+$black: #000000;
+$grey: #333333;
+$brown: #766357;
+$blue: #81B3D2;
 
 
 @mixin tablet {
@@ -19,4 +25,20 @@ $mobile-width-only: 767px;
   @media screen and (max-width: $mobile-width-only) {
     @content;
   }
+}
+
+@mixin white {
+  color: #ffffff;
+}
+
+@mixin black {
+  color: #000000;
+}
+
+@mixin grey {
+  color: #333333;
+}
+
+@mixin brown {
+  color: #766357;
 }
