--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,10 +1,13 @@
 @import "./blocks/mixins/mixins.scss";
 @import "./blocks/fonts.scss";
+@import "./blocks/setup/setup.scss";
 @import "./blocks/theme-light.scss";
 @import "./blocks/theme-dark.scss";
 @import "./blocks/body.scss";
 @import "./blocks/header.scss";
+@import "./blocks/header__toggle.scss";
 @import "./blocks/nav.scss";
+@import "./blocks/nav__opened.scss";
 @import "./blocks/modal.scss";
 @import "./blocks/visually-hiden.scss";
 @import "./blocks/logo__img.scss";
@@ -82,9 +85,15 @@
 @import "./blocks/reset-list.scss";
 @import "./blocks/content__block-card.scss";
 @import "./blocks/content__card.scss";
+@import "./blocks/content__card-list.scss";
 @import "./blocks/advantages-list__bridge.scss";
 @import "./blocks/advantages__item-list.scss";
 @import "./blocks/footer__academy.scss";
 @import "./blocks/content__user-information.scss";
 @import "./blocks/content__introduce.scss";
 @import "./blocks/content__information.scss";
+@import "./blocks/content__intro-index";
+@import "./blocks/advantages__about-city.scss";
+@import "./blocks/advantages__about-bridge.scss";
+@import "./blocks/text-list";
+@import "./blocks/text-index";
