--- a/source/sass/blocks/advantages-item__description.scss
+++ b/source/sass/blocks/advantages-item__description.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding-top: 10px;
   padding-bottom: 30px;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
