--- a/source/sass/blocks/advantages-list__bridge.scss
+++ b/source/sass/blocks/advantages-list__bridge.scss
@@ -1,10 +1,13 @@
 .advantages-list__bridge {
   display: block;
+  width: 100%;
+  height: 260px;
 
   @media (min-width: $tablet-width) {
     width: 512px;
     height: 256px;
   }
+
   @media (min-width: $desktop-width) {
     width: 800px;
     height: 256px;
