--- a/source/sass/blocks/advantages__city-img.scss
+++ b/source/sass/blocks/advantages__city-img.scss
@@ -1,15 +1,9 @@
 .advantages__city-img {
   display: block;
+  width: 100%;
+  height: 260px;
 
-  @media (min-width: $tablet-width) {
-    width: 512px;
-    height: 256px;
-    grid-column: 2;
-  }
+  @media (min-width: $tablet-width) {}
 
-  @media (mid-width: $desktop-width) {
-    width: 800px;
-    height: 256px;
-    grid-column: 2;
-  }
+  @media (min-width: $desktop-width) {}
 }
