--- a/source/sass/blocks/advantages__head.scss
+++ b/source/sass/blocks/advantages__head.scss
@@ -1,11 +1,11 @@
 .advantages__head {
   margin: 0px;
-  padding-top: 32px;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  padding-top: 10px;
+  font-family: $font-stack;
   font-size: 18px;
   line-height: 26px;
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
 }
