--- a/source/sass/blocks/advantages__title.scss
+++ b/source/sass/blocks/advantages__title.scss
@@ -1,14 +1,15 @@
 .advantages__title {
   position: relative;
+  height: 206px;
   padding: 0;
   margin: 0;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  font-family: $font-stack;
 
   @media (min-width: $tablet-width) {
-    width: 768px;
+    width: 100%;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1200px;
+    width: 100%;
   }
 }
