--- a/source/sass/blocks/card__content.scss
+++ b/source/sass/blocks/card__content.scss
@@ -1,10 +1,9 @@
 .card__content {
-  padding-left: 20px;
-  font-family: 'PT Sans';
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
 }
