--- a/source/sass/blocks/card__image.scss
+++ b/source/sass/blocks/card__image.scss
@@ -1,3 +1,12 @@
 .card__image {
-  margin-left: 20px;
+  display: block;
+
+  @media (min-width: $tablet-width) {
+    width: 324px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 400px;
+    height: 267px;
+  }
 }
