--- a/source/sass/blocks/content__card.scss
+++ b/source/sass/blocks/content__card.scss
@@ -1,8 +1,5 @@
 .content__card {
- @media (min-width: $tablet-width) {
-  width: 648px;
- }
- @media (min-width: $desktop-width) {
-  width: 800px;
- }
+  @media (min-width: $tablet-width) {}
+
+  @media (min-width: $desktop-width) {}
 }
