--- a/source/sass/blocks/footer__title.scss
+++ b/source/sass/blocks/footer__title.scss
@@ -8,7 +8,7 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
 
   @media (min-width: $mobile-width-only) {
     padding-top: 38px;
