--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,15 +1,16 @@
 .header {
   display: flex;
   flex-direction: column;
-  width: 320px;
-  background-color: #FFFFFF;
+  width: 100%;
+  background-color: $white;
+  min-height: 56px;
 
 
   @media (min-width: $tablet-width) {
-    width: 768px;
+    width: 100%;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1280px;
+    width: 100%;
   }
 }
