--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,17 +1,9 @@
-.intro {
-  display: block;
-  width: 320px;
-  background-repeat: no-repeat;
-
-  @media (min-width: $tablet-width) {
-    width: 768px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 1200px;
-  }
-}
-
+/* Псевдоэлемент для баннера
 .intro::after {
-  background-image: url(//img/intro-triangle.svg);
-}
+  content: "";
+  position: absolute;
+  background-image: url(/img/intro-triangle.svg);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 57px;
+} */
