--- a/source/sass/blocks/site-list__link.scss
+++ b/source/sass/blocks/site-list__link.scss
@@ -1,11 +1,19 @@
 .site-list__link {
   font-family: "PT Sans", Arial, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 700;
-  line-height: 21px;
+  line-height: 26px;
   letter-spacing: 0px;
   text-align: center;
   list-style-type: none;
   text-decoration: none;
-  color: #000000;
+  color: $white;
+
+  @media (min-width:$tablet-width) {
+    color: $black;
+  }
+
+  @media (min-width:$tablet-width) {
+    color: $black;
+  }
 }
