--- a/source/sass/blocks/text-index.scss
+++ b/source/sass/blocks/text-index.scss
@@ -1,3 +1,13 @@
 .text-index {
-grid-row: 4;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    width: 33.3%;
+    height: 330px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 33.3%;
+    height: 330px;
+  }
 }
