--- a/source/sass/blocks/toggle.scss
+++ b/source/sass/blocks/toggle.scss
@@ -1,7 +1,7 @@
 .toggle {
   position: relative;
   border: none;
-  background-color: #ffffff;
+  background-color: $white;
 
   @media (min-width: $tablet-width) {
     display: none
