--- a/source/sass/blocks/wonder__button.scss
+++ b/source/sass/blocks/wonder__button.scss
@@ -17,6 +17,6 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: $white;
   border: none;
 }
