--- a/source/sass/blocks/advantages-item__sub.scss
+++ b/source/sass/blocks/advantages-item__sub.scss
@@ -8,3 +8,8 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+.advantages-item__sub__bridge {
+  margin-top: 11px;
+  margin-left: -2px;
+}
