--- a/source/sass/blocks/footer__academy-logo.scss
+++ b/source/sass/blocks/footer__academy-logo.scss
@@ -1,4 +1,6 @@
 .footer__academy-logo {
+  padding-top: 0;
+  padding-left: 0;
   font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
