--- a/source/sass/blocks/advantages-item__description.scss
+++ b/source/sass/blocks/advantages-item__description.scss
@@ -1,7 +1,6 @@
 .advantages-item__description {
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 30px;
+  margin: 0 auto;
+  padding-bottom: 39px;
   font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
@@ -10,4 +9,11 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
+}
+
+.advantages-item__description__bridge {
+  padding-top: 3px;
+  padding-right: 27px;
+  padding-left: 20px;
+  padding-bottom: 34px;
 }
