--- a/source/sass/blocks/advantages-item__title.scss
+++ b/source/sass/blocks/advantages-item__title.scss
@@ -1,8 +1,20 @@
 .advantages-item__title {
   margin: 0;
-  padding-top: 40px;
+  padding-top: 70px;
   font-size: 18px;
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width:$tablet-width) {
+    margin: 0;
+    padding-top: 41px;
+    padding-left: 45px;
+    font-size: 21px;
+    width: 217px;
+  }
+}
+
+.advantages-item__title__bridge {
+  padding-top: 40px;
 }
