--- a/source/sass/blocks/advantages-list__sub.scss
+++ b/source/sass/blocks/advantages-list__sub.scss
@@ -13,3 +13,19 @@
     display: block;
   }
 }
+
+.advantages-list__sub__house {
+  margin-left: 8px;
+  margin-top: 12px;
+  padding-right: 4px;
+}
+
+.advantages-list__sub__burger {
+  margin-top: 13px;
+  margin-left: 12px;
+}
+
+.advantages-list__sub__gifts {
+  margin-top: 11px;
+  margin-left: 8px;
+}
