--- a/source/sass/blocks/advantages__city.scss
+++ b/source/sass/blocks/advantages__city.scss
@@ -2,12 +2,12 @@
   display: block;
 
   @media (min-width: $tablet-width) {
-    width: 512px;
+    width: 66.6%;
     height: 256px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 800px;
+    width: 66.6%;
     height: 256px;
     background-image: url(./img/city__photo-desktop.svg);
   }
