--- a/source/sass/blocks/advantages__description.scss
+++ b/source/sass/blocks/advantages__description.scss
@@ -1,12 +1,20 @@
 .advantages__description {
-  font-family: $font-stack;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 21px;
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-  color: $black;
+  color: #000000;
   margin: 0;
-  padding-top: 35px;
+  padding-top: 34px;
+  padding-left: 16px;
   padding-bottom: 32px;
+  width: 302px;
+
+  @media (min-width:$tablet-width) {
+    margin: 0;
+    padding-top: 29px;
+    width: 752px;
+  }
 }
