--- a/source/sass/blocks/advantages__item-list.scss
+++ b/source/sass/blocks/advantages__item-list.scss
@@ -1,9 +1,9 @@
 .advantages__item-list {
   @media (min-width: $tablet-width) {
     width: 100%;
+    max-height: 256px;
     display: grid;
     grid-template-columns: 33.3% 33.3% 33.3%;
-    height: 330px;
   }
 
   @media (min-width: $desktop-width) {
