--- a/source/sass/blocks/footer__title.scss
+++ b/source/sass/blocks/footer__title.scss
@@ -1,4 +1,6 @@
 .footer__title {
+  margin-top: 38px;
+  margin-left: 91px;
   font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
