--- a/source/sass/blocks/intro__img-index.scss
+++ b/source/sass/blocks/intro__img-index.scss
@@ -5,12 +5,11 @@
     height: 389px;
     padding-top: 90px;
     padding-bottom: 57px;
-    background-image: url(../img/index-back-mobile.svg);
-    background-size: 100%;
+    background-image: url(/img/intro-desktop.svg);
+    background-position: center;
     background-repeat: no-repeat;
 
   @media (min-width: $tablet-width) {
-    background-image: url(/img/intro-desktop.svg);
     height: 518px;
     width: 100%;
     display: flex;
@@ -18,7 +17,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    background-image: url(/img/intro-desktop.svg);
     height: 518px;
     width: 100%;
     display: flex;
