--- a/source/sass/blocks/advantages__description.scss
+++ b/source/sass/blocks/advantages__description.scss
@@ -17,4 +17,9 @@
     padding-top: 29px;
     width: 752px;
   }
+  @media (min-width:$tablet-width) {
+    margin: 0 auto;
+    margin-left: 215px;
+    padding-bottom: 22px;
+  }
 }
