--- a/source/sass/blocks/nav__list.scss
+++ b/source/sass/blocks/nav__list.scss
@@ -4,7 +4,8 @@
   @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
-    width: 690px;
+    padding-left: 21px;
+    width: 710px;
     margin: 0 auto;
     background-color: $white;
   }
@@ -12,7 +13,7 @@
   @media (min-width: $desktop-width) {
     display: flex;
     justify-content: space-between;
-    width: 1040px;
+    width: 1058px;
     margin: 0 auto;
     background-color: $white;
   }
