--- a/source/sass/blocks/wonder__description.scss
+++ b/source/sass/blocks/wonder__description.scss
@@ -1,6 +1,8 @@
 .wonder__description {
   margin: 0;
-  padding-top: 19px;
+  padding-top: 20px;
+  padding-left: 30px;
+  padding-right: 29px;
   font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -9,4 +11,11 @@
   text-transform: uppercase;
   text-align: center;
   color: $black;
+
+  @media (min-width: $tablet-width) {
+    width: 435px;
+    padding-top: 33px;
+    margin-left: 166px;
+    text-align: center;
+  }
 }
