--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "./blocks/theme-light.scss";
 @import "./blocks/theme-dark.scss";
 @import "./blocks/body.scss";
+@import "./blocks/container.scss";
 @import "./blocks/header.scss";
 @import "./blocks/header__toggle.scss";
 @import "./blocks/nav.scss";
@@ -100,3 +101,4 @@
 @import "./blocks/advantages__about-bridge.scss";
 @import "./blocks/text-list";
 @import "./blocks/text-index";
+@import "./blocks/footer__academy-img";
