--- a/source/sass/blocks/advantages-item__description.scss
+++ b/source/sass/blocks/advantages-item__description.scss
@@ -1,7 +1,12 @@
 .advantages-item__description {
-  margin: 0 auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  padding-top: 17px;
   padding-bottom: 39px;
-  font-family: $font-stack;
+  padding-left: 14px;
+  width: 300px;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -9,11 +14,33 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 9px;
+    width: 190px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 9px;
+    width: 272px;
+  }
 }
 
 .advantages-item__description__bridge {
-  padding-top: 3px;
-  padding-right: 27px;
-  padding-left: 20px;
+  padding-top: 17px;
+  padding-right: 6px;
+  padding-left: 24px;
   padding-bottom: 34px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 9px;
+    padding-left: 12px;
+    padding-right: 11px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 26px;
+    padding-right: 28px;
+    padding-top: 9px;
+  }
 }
