--- a/source/sass/blocks/advantages-item__sub.scss
+++ b/source/sass/blocks/advantages-item__sub.scss
@@ -1,15 +1,27 @@
 .advantages-item__sub {
-  font-family: $font-stack;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
   align-items: center;
-  text-align: center;
   text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0px;
+  padding-top: 11px;
+  padding-left: 132px;
+
+  @media (min-width:$tablet-width) {
+    margin-top: 13px;
+  }
 }
 
 .advantages-item__sub__bridge {
-  margin-top: 11px;
-  margin-left: -2px;
+  margin-top: 0px;
+  margin-left: 2px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 14px;
+  }
 }
