--- a/source/sass/blocks/advantages-list__title.scss
+++ b/source/sass/blocks/advantages-list__title.scss
@@ -4,6 +4,10 @@
   font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 21px;
+  }
 }
 
 .advantages-list__title__house {
@@ -15,11 +19,10 @@
     padding-top: 21px;
     padding-left: 95px;
     margin: 0;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 21px;
-    line-height: 26px;
-    text-transform: uppercase;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 165px;
   }
 }
 
@@ -27,10 +30,31 @@
   padding-top: 30px;
   padding-left: 12px;
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 22px;
+    padding-left: 109px;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 182px;
+  }
 }
 
 .advantages-list__title__gifts {
   padding-top: 30px;
   padding-left: 8px;
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 19px;
+    padding-left: 78px;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 149px;
+    padding-top: 21px;
+  }
 }
