--- a/source/sass/blocks/advantages__head.scss
+++ b/source/sass/blocks/advantages__head.scss
@@ -22,4 +22,9 @@
     text-align: center;
     width: 500px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 336px;
+    margin-top: 27px;
+  }
 }
