--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -2,6 +2,7 @@
   display: grid;
   background: #e7e5e5;
   margin: 0 auto;
+  font-family: $font-stack;
 
   @media (min-width: $tablet-width) {
     margin: 0 auto;
