--- a/source/sass/blocks/content__intro-index.scss
+++ b/source/sass/blocks/content__intro-index.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  background-image: url(/img/intro-background-mobile.svg);
+  background-position: center;
   background-repeat: no-repeat;
 
   @media (min-width: $tablet-width) {
@@ -18,13 +20,3 @@
     background-repeat: no-repeat;
   }
 }
-
-/* Псевдоэлемент для баннера
- .content__intro-index::after {
-  background-image: url(/img/intro-triangle.svg);
-  width: 768px;
-  height: 57px;
-  top: 100px;
-  left: 10px;
-  background-color: green;
-} */
