--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,9 +1,21 @@
-/* Псевдоэлемент для баннера
 .intro::after {
   content: "";
   position: absolute;
+  top: 388px;
   background-image: url(/img/intro-triangle.svg);
   background-repeat: no-repeat;
   width: 100%;
   height: 57px;
-} */
+
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 518px;
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 518px;
+    width: 1200px;
+  }
+}
