--- a/source/sass/blocks/wonder__title.scss
+++ b/source/sass/blocks/wonder__title.scss
@@ -1,9 +1,15 @@
 .wonder__title {
   margin: 0;
   padding-top: 39px;
+  font-weight: 700;
   font-size: 21px;
   line-height: 26px;
   align-items: center;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 59px;
+    font-size: 30px;
+  }
 }
